--- a/init.config
+++ b/init.config
@@ -2,12 +2,12 @@
 
 [token]
 # 网易云音乐账号（手机号/网易邮箱）
-account = 150********
+account = 18156274611
 
 # 密码，明文/MD5,建议自己去MD5在线加密网站给密码加密,然后填到下面
 # 明文例如：123456abcd
 # MD5例如：efa224f8de55cb668cd01edbccdfc8a9
-password = bfa834f7de58cb650ca01edb********
+password = 0a6ed8251a669f7e20c4cc7069fa72e8
 
 # 国家码，用于国外手机号登陆，国内为86
 countrycode = 86
@@ -16,7 +16,7 @@ countrycode = 86
 [setting]
 # 开关的选项只有 True 和 False
 # 接口API，如果失效请自行部署,地址:https://github.com/ZainCheung/netease-cloud-api
-api = https://netease-cloud-api-sep.glitch.me/
+api = https://netease-cloud-api-boyce.glitch.me/
 
 # 密码是否需要MD5加密，如果是明文密码一定要打开
 # true  需要, 则直接将你的密码（明文）填入password,程序会替你进行加密
