--- a/init.config
+++ b/init.config
@@ -29,4 +29,5 @@ md5Switch = false
 peopleSwitch = false
 
 # Server酱的密匙,不需要推送就留空,密匙的免费申请参考:http://sc.ftqq.com/
-sckey = SCU97783T70c13167b4daa422f4d419a765eb4ebb5ebc9********
+sckey = SCU5596Tfb9663a009d836d5c5c47ea7eca1ce4f58920e38b579d
+
