--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -21,7 +21,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-    - name: 签到
+    - name: Install Dependencies
+              
       run: |
         pip install -r requirements.txt
          python index.py 
+         python main.py
+          run: python index.py 
