--- a/init.config
+++ b/init.config
@@ -16,7 +16,7 @@ countrycode = 86
 [setting]
 # 开关的选项只有 True 和 False
 # 接口API，如果失效请自行部署,地址:https://github.com/ZainCheung/netease-cloud-api
-api = https://netease-cloud-api-boyce.glitch.me/
+api = https://api.qqlogin.com/netease/
 
 # 密码是否需要MD5加密，如果是明文密码一定要打开
 # true  需要, 则直接将你的密码（明文）填入password,程序会替你进行加密
