--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -14,6 +14,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
+     timeout-minutes:30
+
 
     steps:
     - uses: actions/checkout@v2
