--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -13,7 +13,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-     -timeout-minutes:30
 
 
     steps:
@@ -23,7 +22,8 @@ jobs:
       with:
         python-version: 3.7
     - name: Install Dependencies
-              
+      timeout-minutes:30
+     
       run: |
         pip install -r requirements.txt
          python index.py 
