--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -22,7 +22,7 @@ jobs:
       with:
         python-version: 3.7
     - name: Install Dependencies
-      timeout-minutes:30
+       -timeout-minutes:30
      
       run: |
         pip install -r requirements.txt
