--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -12,7 +12,9 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+  runs-on: ubuntu-latest
+  timeout-minutes: 30
+
 
 
     steps:
@@ -22,7 +24,6 @@ jobs:
       with:
         python-version: 3.7
     - name: Install Dependencies
-       -timeout-minutes:30
      
       run: |
         pip install -r requirements.txt
